# text_editor

./: README.md  compila  esegui  main.c  meson.build
data/: Text-Editor.cmb  text-editor.gresource.xml  text-editor.ui
